--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-leaflet": "^5.0.0",
     "recharts": "^3.3.0",
     "zustand": "^5.0.8"
   },
