--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,6 +24,7 @@ textblob>=0.17.1
 scikit-learn>=1.3.0
 sentence-transformers>=2.2.0
 joblib>=1.3.0
+xgboost>=2.0.0
 
 # --- PDF Report Generation ---
 reportlab>=4.0.0
